--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             </div>
             <a href="#about" class="btn-box">More About Me</a>
-            <a href="gokul.pdf" download="gokul.pdf"  class="btn-res">Resume</a>
+            <a target="_blank" href="gokul.pdf.pdf" download="gokul.pdf"  class="btn-res">Resume</a>
         </div>
         <div class="photo">
             <img src="photo1.jpg" alt="">
