--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 
             </div>
             <a href="#about" class="btn-box">More About Me</a>
-            <a target="_blank" href="gokul.pdf.pdf" download="gokul.pdf"  class="btn-res">Resume</a>
+            <a target="_blank" href="sources/gokul.pdf.pdf" download="gokul.pdf"  class="btn-res">Resume</a>
         </div>
         <div class="photo">
-            <img src="photo1.jpg" alt="">
+            <img src="sources/photo1.jpg" alt="">
         </div>
         <span class="home-imgHover"></span>
     </section>
@@ -55,7 +55,7 @@
     <section id="about" class="about">
 
         <div class="about-img">
-            <img src="imm.webp" alt="">
+            <img src="/sources/imm.webp" alt="">
         </div>
 
         <div class="about-text">
@@ -84,7 +84,10 @@
                 <h1 class="sub-title">My <span>Areas of Expertise</span></h1>
                 <div class="service-list">
                     <div>
-                        <i class='bx bxl-html5'></i>
+                        <i class='bx bxl-html5' style="color: #c95d2e;"></i>
+                        <i class='bx bxl-css3' style="color: #147bbc;"></i>
+                        <i class='bx bxl-javascript' style="color: #b0bc1e;"></i>
+                        <i class='bx bxl-react' style="color: #69bcbc;"></i>
                         <h2>Front-end developer</h2>
                         <p> I specialize in building responsive, user-friendly, and visually appealing web interfaces. I
                             focus on creating intuitive designs that ensure an exceptional user experience across
@@ -93,7 +96,9 @@
                             React.js, enabling me to build modern, scalable, and maintainable applications.</p>
                     </div>
                     <div>
-                        <i class='bx bxl-java'></i>
+                        <i class='bx bxl-java' style="color: #5382a1"></i>
+                        <i class='bx bxl-spring-boot' style="color: #6db33f;"></i>
+                        <i class="fas fa-database" style="color: #00758f;"></i>
                         <h2>Back-end developer</h2>
                         <p> I focus on building robust, scalable, and secure server-side applications. With expertise in
                             Java and frameworks like Spring Boot, I develop efficient APIs and backend services that
@@ -214,7 +219,7 @@
                 <h2>Latest <span>Project</span></h2>
                 <div class="protfolio-content">
                     <div class="row">
-                        <img src="port.jpeg" alt="">
+                        <img src="/sources/port.jpeg" alt="">
                         <div class="layer">
                             <h5>Portfolio</h5>
                             <p>Creating my own portfolio allows me to effectively apply the skills I've acquired in
@@ -223,7 +228,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <img src="chat.png" alt="">
+                        <img src="/sources/chat.png" alt="">
                         <div class="layer">
                             <h5>Chat Application</h5>
                             <p>Developing a fully functional application is a substantial task, and I utilized my
@@ -231,7 +236,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <img src="web.jpeg" alt="">
+                        <img src="/sources/web.jpeg" alt="">
                         <div class="layer">
                             <h5>Web Application</h5>
                             <p>I am actively working on the development of the web application, focusing on delivering a
@@ -254,7 +259,7 @@
                 your team's success.</p>
             <div class="contact-list">
                 <li><i class='bx bx-send'></i>gokulrajkraj15@gmail.com</li>
-                <li><i class='bx bx-phone'></i>786891881</li>
+                <li><i class='bx bx-phone'></i>7868931881</li>
             </div>
             <div class="contact-icons">
                 <a target="_blank" href="https://www.linkedin.com/in/gokul-raj-8a928131a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app " style="--i:5"><i class='bx bxl-linkedin'></i></a>
