--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <section id="about" class="about">
 
         <div class="about-img">
-            <img src="/sources/imm.webp" alt="">
+            <img src="sources/imm.webp" alt="">
         </div>
 
         <div class="about-text">
@@ -219,7 +219,7 @@
                 <h2>Latest <span>Project</span></h2>
                 <div class="protfolio-content">
                     <div class="row">
-                        <img src="/sources/port.jpeg" alt="">
+                        <img src="sources/port.jpeg" alt="">
                         <div class="layer">
                             <h5>Portfolio</h5>
                             <p>Creating my own portfolio allows me to effectively apply the skills I've acquired in
@@ -228,7 +228,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <img src="/sources/chat.png" alt="">
+                        <img src="sources/chat.png" alt="">
                         <div class="layer">
                             <h5>Chat Application</h5>
                             <p>Developing a fully functional application is a substantial task, and I utilized my
@@ -236,7 +236,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <img src="/sources/web.jpeg" alt="">
+                        <img src="sources/web.jpeg" alt="">
                         <div class="layer">
                             <h5>Web Application</h5>
                             <p>I am actively working on the development of the web application, focusing on delivering a
